--- a/Home.html
+++ b/Home.html
@@ -12,9 +12,9 @@
         <nav>
             <ul>
                 <li><a href="Home.html">Home</a></li>
+                <li><a href="#">Working..</a></li>
                 <li><a href="#">Working...</a></li>
-                <li><a href="#">Working...</a></li>
-                <li><a href="#">Internship Logs</a></li>
+                <li><a href="Intern-Logs.html">Internship Logs</a></li>
                 <li><a href="#">Contact Info</a></li>
             </ul>
         </nav>
