--- a/Internship-Logs.html
+++ b/Internship-Logs.html
@@ -22,6 +22,34 @@
     <body>
         
         <h2 style="font-size:50px;">Internship Logs</h2>
-        
+        <p><br>
+            <img src="First Repo.png" style="float:left; padding-right: 10px; width: 25%; height: 25%">
+            <h2 style="font-size: x-large;">Git and GitHub</h2>
+            <p style="font-size: 20px;">
+                I completed half of the <a href="https://www.youtube.com/watch?v=RGOj5yH7evk&ab_channel=freeCodeCamp.org">"Git and
+                GitHub for Beginners - Crash Course."</a> From this, I learned the difference between Git and GitHub, along with 
+                Git commands such as "git push", "git add", "git commit" and "git clone." Additionally, I learned the basically 
+                terminologies used when working with Git and GitHub. As well, I learned about SSH keys and learned to generate my
+                own for my GitHub account. The only thing I would do differently is to clone with HTTPS rather than SSH.
+                <br>
+                <p style="font: size -5px;">- September 26, 2022</p>
+            </p>
+            <br>
+            <br>
+            <br>
+            <p>
+                <img src="Website pic.png" style="float:left; padding-right: 10px; width: 25%; height: 25%">
+                <h2 style="font-size: x-large;">Hosting A Website</h2>
+                <p style="font-size: 20px;">
+                    I completed the other half of the <a href="https://www.youtube.com/watch?v=RGOj5yH7evk&ab_channel=freeCodeCamp.org">
+                    Crash Course.</a> This went smoother than yesterday as through research and trying out various cloning methods, HTTPS 
+                    was easier to clone with as it caused less errors compared to SSH. Once I finished the crash course. I watch a 
+                    <a href="https://www.youtube.com/watch?v=QyFcl_Fba-k&ab_channel=TheNetNinja">YouTube video</a> about GitHub pages and 
+                    how to host my own. I was successfully able to host my own <a href="https://fabienthich.github.io/website/">website</a>
+                    as seen on the left. I have made some improvements to the website and I am currently working on pushing it out and updating
+                    it.<br>
+                    <p style="font: size -5px;">- September 27, 2022</p>
+                </p>
+            </p>
     </body>
 </html>
