--- a/Intern-Logs.html
+++ b/Intern-Logs.html
@@ -14,7 +14,7 @@ html lang="en">
                 <li><a href="Home.html">Home</a></li>
                 <li><a href="#">Working..</a></li>
                 <li><a href="#">Working...</a></li>
-                <li><a href="Intern-Logs.html">Internship Logs</a></li>
+                <li><a href="Internship-Logs.html">Internship Logs</a></li>
                 <li><a href="#">Contact Info</a></li>
             </ul>
         </nav>
