--- a/Internship-Logs.html
+++ b/Internship-Logs.html
@@ -41,8 +41,9 @@
                 <img src="Website pic.png" style="float:left; padding-right: 10px; width: 25%; height: 25%">
                 <h2 style="font-size: x-large;">Hosting A Website</h2>
                 <p style="font-size: 20px;">
-                    I completed the other half of the <a href="https://www.youtube.com/watch?v=RGOj5yH7evk&ab_channel=freeCodeCamp.org">
-                    Crash Course.</a> This went smoother than yesterday as through research and trying out various cloning methods, HTTPS 
+                    I completed the other half of the
+                    <a href="https://www.youtube.com/watch?v=RGOj5yH7evk&ab_channel=freeCodeCamp.org">Crash Course.</a>
+                    This went smoother than yesterday as through research and trying out various cloning methods, HTTPS 
                     was easier to clone with as it caused less errors compared to SSH. Once I finished the crash course. I watch a 
                     <a href="https://www.youtube.com/watch?v=QyFcl_Fba-k&ab_channel=TheNetNinja">YouTube video</a> about GitHub pages and 
                     how to host my own. I was successfully able to host my own <a href="https://fabienthich.github.io/website/">website</a>
