--- a/Home.html
+++ b/Home.html
@@ -23,8 +23,8 @@
     <body>
         
         <h2 style="font-size:50px;">Home</h2>
-        <p>Hello World</p>
-        <p>Hello World</p>
-        <p>Hello World</p>
+        <p>Hello World!</p>
+        <p>Hello World!</p>
+        <p>Hello World!</p>
     </body>
 </html>
