--- a/Internship-Logs.html
+++ b/Internship-Logs.html
@@ -11,7 +11,7 @@
         <h1>Personal Website</h1>
         <nav>
             <ul>
-                <li><a href="Home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Working..</a></li>
                 <li><a href="#">Working...</a></li>
                 <li><a href="Internship-Logs.html">Internship Logs</a></li>
