Updated Internship Logs 9/28/2022

--- a/Internship-Logs.html
+++ b/Internship-Logs.html
@@ -23,8 +23,8 @@
         
         <h2 style="font-size:50px;">Internship Logs</h2>
         <p><br>
-            <img src="First Repo.png" style="float:left; padding-right: 10px; width: 25%; height: 25%">
-            <h2 style="font-size: x-large;">Git and GitHub</h2>
+            <img src="First Repo.png" style="float:left; padding-right: 10px; padding-left: 10px; width: 25%; height: 25%">
+            <h2 style="font-size: x-large; text-align: left;">Git and GitHub</h2>
             <p style="font-size: 20px;">
                 I completed half of the <a href="https://www.youtube.com/watch?v=RGOj5yH7evk&ab_channel=freeCodeCamp.org">"Git and
                 GitHub for Beginners - Crash Course."</a> From this, I learned the difference between Git and GitHub, along with 
@@ -38,8 +38,8 @@
             <br>
             <br>
             <p>
-                <img src="Website pic.png" style="float:left; padding-right: 10px; width: 25%; height: 25%">
-                <h2 style="font-size: x-large;">Hosting A Website</h2>
+                <img src="Website pic.png" style="float:left; padding-right: 10px; padding-left: 10px; width: 25%; height: 25%">
+                <h2 style="font-size: x-large; text-align: left;">Hosting A Website</h2>
                 <p style="font-size: 20px;">
                     I completed the other half of the
                     <a href="https://www.youtube.com/watch?v=RGOj5yH7evk&ab_channel=freeCodeCamp.org">Crash Course.</a>
