--- a/Internship-Logs.html
+++ b/Internship-Logs.html
@@ -25,14 +25,14 @@
         <p><br>
             <img src="First Repo.png" style="float:left; padding-right: 10px; padding-left: 10px; width: 25%; height: 25%">
             <h2 style="font-size: x-large; text-align: left;">Git and GitHub</h2>
-            <p style="font-size: 20px;">
+            <p style="font-size: 20px; text-align: left;">
                 I completed half of the <a href="https://www.youtube.com/watch?v=RGOj5yH7evk&ab_channel=freeCodeCamp.org">"Git and
                 GitHub for Beginners - Crash Course."</a> From this, I learned the difference between Git and GitHub, along with 
                 Git commands such as "git push", "git add", "git commit" and "git clone." Additionally, I learned the basically 
                 terminologies used when working with Git and GitHub. As well, I learned about SSH keys and learned to generate my
                 own for my GitHub account. The only thing I would do differently is to clone with HTTPS rather than SSH.
                 <br>
-                <p style="font: size -5px;">- September 26, 2022</p>
+                <p style="font: size -5px; text-align: left;">- September 26, 2022</p>
             </p>
             <br>
             <br>
@@ -40,7 +40,7 @@
             <p>
                 <img src="Website pic.png" style="float:left; padding-right: 10px; padding-left: 10px; width: 25%; height: 25%">
                 <h2 style="font-size: x-large; text-align: left;">Hosting A Website</h2>
-                <p style="font-size: 20px;">
+                <p style="font-size: 20px; text-align: left;">
                     I completed the other half of the
                     <a href="https://www.youtube.com/watch?v=RGOj5yH7evk&ab_channel=freeCodeCamp.org">Crash Course.</a>
                     This went smoother than yesterday as through research and trying out various cloning methods, HTTPS 
@@ -49,9 +49,30 @@
                     how to host my own. I was successfully able to host my own <a href="https://fabienthich.github.io/website/">website</a>
                     as seen on the left. I have made some improvements to the website and I am currently working on pushing it out and updating
                     it.<br>
-                    <p style="font: size -5px;">- September 27, 2022</p>
+                    <p style="font: size -5px; text-align: left;">- September 27, 2022</p>
                 </p>
-                <p>hi</p>
             </p>
+            <br>
+            <br>
+            <br>
+            <p>
+                <img src="ToDoPic.png" style="float:left; padding-right: 10px; padding-left: 10px; width: 25%; height: 25%">
+                <h2 style="font-size: x-large; text-align: left;">Introduction To React</h2>
+                <p style="font-size: 20px; text-align: left;">
+                    I followed along a 
+                    <a href="https://www.youtube.com/watch?v=hQAHSlTtcmY&ab_channel=WebDevSimplified">React Tutorial.</a> 
+                    This tutorial does not cover the complex concepts of React but does cover the basics of React. I did not get to finish the
+                    tutorial, however, I did follow alongside. The tutorial demonstrated how to create a To-Do List using React as well as using 
+                    npm and npx commands. The photo on the left shows a To-Do List that displays tasks in the console that the user typed into
+                    the textbox. As well, I successfully changed my default website page from my README.md file to 
+                    <a href="index.html"><b>Home.</b></a>
+                    <br>
+                    <p style="font: size -5px; text-align: left;">- September 28, 2022</p>
+                </p>
+                <br>
+                <br>
+                <br>
+            </p>
+        </p>
     </body>
 </html>
