--- a/Internship-Logs.html
+++ b/Internship-Logs.html
@@ -32,7 +32,7 @@
                 terminologies used when working with Git and GitHub. As well, I learned about SSH keys and learned to generate my
                 own for my GitHub account. The only thing I would do differently is to clone with HTTPS rather than SSH.
                 <br>
-                <p style="font: size -5px; text-align: left;">- September 26, 2022</p>
+                <p style="font: size -5px; text-align: center;">(September 26, 2022)</p>
             </p>
             <br>
             <br>
@@ -42,14 +42,14 @@
                 <h2 style="font-size: x-large; text-align: left;">Hosting A Website</h2>
                 <p style="font-size: 20px; text-align: left;">
                     I completed the other half of the
-                    <a href="https://www.youtube.com/watch?v=RGOj5yH7evk&ab_channel=freeCodeCamp.org">Crash Course.</a>
+                    <a href="https://www.youtube.com/watch?v=RGOj5yH7evk&ab_channel=freeCodeCamp.org"><u style="color: blue;">Crash Course.</u></a>
                     This went smoother than yesterday as through research and trying out various cloning methods, HTTPS 
                     was easier to clone with as it caused less errors compared to SSH. Once I finished the crash course. I watch a 
-                    <a href="https://www.youtube.com/watch?v=QyFcl_Fba-k&ab_channel=TheNetNinja">YouTube video</a> about GitHub pages and 
-                    how to host my own. I was successfully able to host my own <a href="https://fabienthich.github.io/website/">website</a>
+                    <a href="https://www.youtube.com/watch?v=QyFcl_Fba-k&ab_channel=TheNetNinja"><u style="color: blue;">YouTube video</u></a> about GitHub pages and 
+                    how to host my own. I was successfully able to host my own <a href="https://fabienthich.github.io/website/"><u style="color: blue;">website</u></a>
                     as seen on the left. I have made some improvements to the website and I am currently working on pushing it out and updating
                     it.<br>
-                    <p style="font: size -5px; text-align: left;">- September 27, 2022</p>
+                    <p style="font: size -5px; text-align: center;">(September 27, 2022)</p>
                 </p>
             </p>
             <br>
@@ -60,14 +60,14 @@
                 <h2 style="font-size: x-large; text-align: left;">Introduction To React</h2>
                 <p style="font-size: 20px; text-align: left;">
                     I followed along a 
-                    <a href="https://www.youtube.com/watch?v=hQAHSlTtcmY&ab_channel=WebDevSimplified">React Tutorial.</a> 
+                    <a href="https://www.youtube.com/watch?v=hQAHSlTtcmY&ab_channel=WebDevSimplified"><u style="color: blue;">React Tutorial.</u></a> 
                     This tutorial does not cover the complex concepts of React but does cover the basics of React. I did not get to finish the
                     tutorial, however, I did follow alongside. The tutorial demonstrated how to create a To-Do List using React as well as using 
                     npm and npx commands. The photo on the left shows a To-Do List that displays tasks in the console that the user typed into
                     the textbox. As well, I successfully changed my default website page from my README.md file to 
-                    <a href="index.html"><b>Home.</b></a>
+                    <a href="index.html"><b><u style="color: blue;">Home.</u></b></a>
                     <br>
-                    <p style="font: size -5px; text-align: left;">- September 28, 2022</p>
+                    <p style="font: size -5px; text-align: center;">(September 28, 2022)</p>
                 </p>
                 <br>
                 <br>
