--- a/Internship-Logs.html
+++ b/Internship-Logs.html
@@ -26,8 +26,8 @@
             <img src="First Repo.png" style="float:left; padding-right: 10px; padding-left: 10px; width: 25%; height: 25%">
             <h2 style="font-size: x-large; text-align: left;">Git and GitHub</h2>
             <p style="font-size: 20px; text-align: left;">
-                I completed half of the <a href="https://www.youtube.com/watch?v=RGOj5yH7evk&ab_channel=freeCodeCamp.org">"Git and
-                GitHub for Beginners - Crash Course."</a> From this, I learned the difference between Git and GitHub, along with 
+                I completed half of the <a href="https://www.youtube.com/watch?v=RGOj5yH7evk&ab_channel=freeCodeCamp.org"><u style="color: blue;">"Git and
+                GitHub for Beginners - Crash Course."</u></a> From this, I learned the difference between Git and GitHub, along with 
                 Git commands such as "git push", "git add", "git commit" and "git clone." Additionally, I learned the basically 
                 terminologies used when working with Git and GitHub. As well, I learned about SSH keys and learned to generate my
                 own for my GitHub account. The only thing I would do differently is to clone with HTTPS rather than SSH.
@@ -49,6 +49,7 @@
                     how to host my own. I was successfully able to host my own <a href="https://fabienthich.github.io/website/"><u style="color: blue;">website</u></a>
                     as seen on the left. I have made some improvements to the website and I am currently working on pushing it out and updating
                     it.<br>
+                    <br>
                     <p style="font: size -5px; text-align: center;">(September 27, 2022)</p>
                 </p>
             </p>
@@ -66,6 +67,7 @@
                     npm and npx commands. The photo on the left shows a To-Do List that displays tasks in the console that the user typed into
                     the textbox. As well, I successfully changed my default website page from my README.md file to 
                     <a href="index.html"><b><u style="color: blue;">Home.</u></b></a>
+                    <br>
                     <br>
                     <p style="font: size -5px; text-align: center;">(September 28, 2022)</p>
                 </p>
