--- a/Internship-Logs.html
+++ b/Internship-Logs.html
@@ -32,6 +32,7 @@
                 terminologies used when working with Git and GitHub. As well, I learned about SSH keys and learned to generate my
                 own for my GitHub account. The only thing I would do differently is to clone with HTTPS rather than SSH.
                 <br>
+                <br>
                 <p style="font: size -5px; text-align: center;">(September 26, 2022)</p>
             </p>
             <br>
@@ -46,9 +47,10 @@
                     This went smoother than yesterday as through research and trying out various cloning methods, HTTPS 
                     was easier to clone with as it caused less errors compared to SSH. Once I finished the crash course. I watch a 
                     <a href="https://www.youtube.com/watch?v=QyFcl_Fba-k&ab_channel=TheNetNinja"><u style="color: blue;">YouTube video</u></a> about GitHub pages and 
-                    how to host my own. I was successfully able to host my own <a href="https://fabienthich.github.io/website/"><u style="color: blue;">website</u></a>
+                    how to host my own. I was successfully able to host my own <a href="https://fabienthich.github.io"><u style="color: blue;">website</u></a>
                     as seen on the left. I have made some improvements to the website and I am currently working on pushing it out and updating
-                    it.<br>
+                    it.
+                    <br>
                     <br>
                     <p style="font: size -5px; text-align: center;">(September 27, 2022)</p>
                 </p>
@@ -66,15 +68,34 @@
                     tutorial, however, I did follow alongside. The tutorial demonstrated how to create a To-Do List using React as well as using 
                     npm and npx commands. The photo on the left shows a To-Do List that displays tasks in the console that the user typed into
                     the textbox. As well, I successfully changed my default website page from my README.md file to 
-                    <a href="index.html"><b><u style="color: blue;">Home.</u></b></a>
+                    <a href="index.html"><u style="color: blue;">Home.</u></a>
                     <br>
                     <br>
                     <p style="font: size -5px; text-align: center;">(September 28, 2022)</p>
                 </p>
-                <br>
-                <br>
-                <br>
             </p>
+            <br>
+            <br>
+            <br>
+            <p>
+                <img src="First App.png" style="float:left; padding-right: 10px; padding-left: 10px; width: 25%; height: 25%">
+                <h2 style="font-size: x-large; text-align: left;">Click Counter</h2>
+                <p style="font-size: 20px; text-align: left;">
+                    I developed a clicking app, or a simpler version of Cookie Clicker through a 
+                    <a href="https://www.youtube.com/watch?v=b9eMGE7QtTk&ab_channel=JavaScriptMastery"><u style="color: blue;">Crash Course.</u></a> 
+                    This tutorial involves the uses of "Props" and "Hooks" such as "useStates." This clicking app does not only let to add by one,
+                    but allows you to subtract by one as well. After finishing this tutorial, I gained a better understanding of React's format. 
+                    To further familiarize myself with React, I started another tutorial, 
+                    "<a href="https://www.youtube.com/watch?v=dGcsHMXbSOA&ab_channel=developedbyed"><u style="color: blue;">React Tutorial For Beginners</u></a>"
+                    which puts more emphasis on the concepts and structures.
+                    <br>
+                    <br>
+                    <p style="font: size -5px; text-align: center;">(September 29, 2022)</p>
+                </p>
+            </p>
+            <br>
+            <br>
+            <br>
         </p>
     </body>
 </html>
