--- a/Internship-Logs.html
+++ b/Internship-Logs.html
@@ -39,7 +39,7 @@
             <br>
             <br>
             <p>
-                <img src="Website pic.png" style="float:left; padding-right: 10px; padding-left: 10px; width: 25%; height: 25%">
+                <img src="Website pic2.png" style="float:left; padding-right: 10px; padding-left: 10px; width: 25%; height: 25%">
                 <h2 style="font-size: x-large; text-align: left;">Hosting A Website</h2>
                 <p style="font-size: 20px; text-align: left;">
                     I completed the other half of the
@@ -59,7 +59,7 @@
             <br>
             <br>
             <p>
-                <img src="ToDoPic.png" style="float:left; padding-right: 10px; padding-left: 10px; width: 25%; height: 25%">
+                <img src="ToDoPic2.png" style="float:left; padding-right: 10px; padding-left: 10px; width: 25%; height: 25%">
                 <h2 style="font-size: x-large; text-align: left;">Introduction To React</h2>
                 <p style="font-size: 20px; text-align: left;">
                     I followed along a 
