--- a/Internship-Logs.html
+++ b/Internship-Logs.html
@@ -96,6 +96,23 @@
             <br>
             <br>
             <br>
+            <p>
+                <img src="Converting to React.png" style="float:left; padding-right: 10px; padding-left: 10px; width: 25%; height: 25%">
+                <h2 style="font-size: x-large; text-align: left;">Attempting To Rewrite My Website In React </h2>
+                <p style="font-size: 20px; text-align: left;">
+                    I began the process of rewriting my website using React. During this process, I created a <b><i>component</i></b> folder under my <b><i>src</i></b> folder
+                    which included Javascript contents for the header and body of the website. The React website to the left is identical to the website from 
+                    September 27, 2022 (Hosting a Website). The only difference is that this websites navigation bar is still in the works and the "styles"
+                    for the Internship-Logs content need to be converted into React format. I am working to solve these issues to create an exact replica.      
+                    <br>
+                    <br>
+                    <p style="font: size -5px; text-align: center;">(September 30, 2022)</p>
+                </p>
+            </p>
+            <br>
+            <br>
+            <br>
         </p>
+        
     </body>
 </html>
