--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
         <h1>Personal Website</h1>
         <nav>
             <ul>
-                <li><a href="Home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Working..</a></li>
-                <li><a href="#">Working...</a></li>
                 <li><a href="#">Working...</a></li>
                 <li><a href="Internship-Logs.html">Internship Logs</a></li>
                 <li><a href="#">Contact Info</a></li>
