--- a/Internship-Logs.html
+++ b/Internship-Logs.html
@@ -26,9 +26,9 @@
             <img src="First Repo.png" style="float:left; padding-right: 10px; padding-left: 10px; width: 25%; height: 25%">
             <h2 style="font-size: x-large; text-align: left;">Git and GitHub</h2>
             <p style="font-size: 20px; text-align: left;">
-                I completed half of the <a href="https://www.youtube.com/watch?v=RGOj5yH7evk&ab_channel=freeCodeCamp.org"><u style="color: blue;">"Git and
+                I completed half of the <a href="https://www.youtube.com/watch?v=RGOj5yH7evk&ab_channel=freeCodeCamp.org" target="_blank"><u style="color: blue;">"Git and
                 GitHub for Beginners - Crash Course."</u></a> From this, I learned the difference between Git and GitHub, along with 
-                Git commands such as "git push", "git add", "git commit" and "git clone." Additionally, I learned the basically 
+                Git commands such as "git push", "git add", "git commit" and "git clone." Additionally, I learned the basic 
                 terminologies used when working with Git and GitHub. As well, I learned about SSH keys and learned to generate my
                 own for my GitHub account. The only thing I would do differently is to clone with HTTPS rather than SSH.
                 <br>
@@ -43,10 +43,10 @@
                 <h2 style="font-size: x-large; text-align: left;">Hosting A Website</h2>
                 <p style="font-size: 20px; text-align: left;">
                     I completed the other half of the
-                    <a href="https://www.youtube.com/watch?v=RGOj5yH7evk&ab_channel=freeCodeCamp.org"><u style="color: blue;">Crash Course.</u></a>
+                    <a href="https://www.youtube.com/watch?v=RGOj5yH7evk&ab_channel=freeCodeCamp.org" target="_blank"><u style="color: blue;">Crash Course.</u></a>
                     This went smoother than yesterday as through research and trying out various cloning methods, HTTPS 
-                    was easier to clone with as it caused less errors compared to SSH. Once I finished the crash course. I watch a 
-                    <a href="https://www.youtube.com/watch?v=QyFcl_Fba-k&ab_channel=TheNetNinja"><u style="color: blue;">YouTube video</u></a> about GitHub pages and 
+                    was easier to clone with as it caused less errors compared to SSH. Once I finished the crash course. I watched a 
+                    <a href="https://www.youtube.com/watch?v=QyFcl_Fba-k&ab_channel=TheNetNinja" target="_blank"><u style="color: blue;">YouTube video</u></a> about GitHub pages and 
                     how to host my own. I was successfully able to host my own <a href="https://fabienthich.github.io"><u style="color: blue;">website</u></a>
                     as seen on the left. I have made some improvements to the website and I am currently working on pushing it out and updating
                     it.
@@ -63,7 +63,7 @@
                 <h2 style="font-size: x-large; text-align: left;">Introduction To React</h2>
                 <p style="font-size: 20px; text-align: left;">
                     I followed along a 
-                    <a href="https://www.youtube.com/watch?v=hQAHSlTtcmY&ab_channel=WebDevSimplified"><u style="color: blue;">React Tutorial.</u></a> 
+                    <a href="https://www.youtube.com/watch?v=hQAHSlTtcmY&ab_channel=WebDevSimplified" target="_blank"><u style="color: blue;">React Tutorial.</u></a> 
                     This tutorial does not cover the complex concepts of React but does cover the basics of React. I did not get to finish the
                     tutorial, however, I did follow alongside. The tutorial demonstrated how to create a To-Do List using React as well as using 
                     npm and npx commands. The photo on the left shows a To-Do List that displays tasks in the console that the user typed into
@@ -82,11 +82,11 @@
                 <h2 style="font-size: x-large; text-align: left;">Click Counter</h2>
                 <p style="font-size: 20px; text-align: left;">
                     I developed a clicking app, or a simpler version of Cookie Clicker through a 
-                    <a href="https://www.youtube.com/watch?v=b9eMGE7QtTk&ab_channel=JavaScriptMastery"><u style="color: blue;">Crash Course.</u></a> 
+                    <a href="https://www.youtube.com/watch?v=b9eMGE7QtTk&ab_channel=JavaScriptMastery" target="_blank"><u style="color: blue;">Crash Course.</u></a> 
                     This tutorial involves the uses of "Props" and "Hooks" such as "useStates." This clicking app does not only let to add by one,
                     but allows you to subtract by one as well. After finishing this tutorial, I gained a better understanding of React's format. 
                     To further familiarize myself with React, I started another tutorial, 
-                    "<a href="https://www.youtube.com/watch?v=dGcsHMXbSOA&ab_channel=developedbyed"><u style="color: blue;">React Tutorial For Beginners</u></a>"
+                    "<a href="https://www.youtube.com/watch?v=dGcsHMXbSOA&ab_channel=developedbyed" target="_blank"><u style="color: blue;">React Tutorial For Beginners</u></a>"
                     which puts more emphasis on the concepts and structures.
                     <br>
                     <br>
@@ -103,10 +103,26 @@
                     I began the process of rewriting my website using React. During this process, I created a <b><i>component</i></b> folder under my <b><i>src</i></b> folder
                     which included Javascript contents for the header and body of the website. The React website to the left is identical to the website from 
                     September 27, 2022 (Hosting a Website). The only difference is that this websites navigation bar is still in the works and the "styles"
-                    for the Internship-Logs content need to be converted into React format. I am working to solve these issues to create an exact replica.      
+                    for the Internship-Logs content needs to be converted into React format. I am working to solve these issues to create an exact replica.      
                     <br>
                     <br>
                     <p style="font: size -5px; text-align: center;">(September 30, 2022)</p>
+                </p>
+            </p>
+            <br>
+            <br>
+            <br>
+            <p>
+                <a href="shortcuts.txt" target="_blank"><img src="Shortcuts.png" style="float:left; padding-right: 10px; padding-left: 10px; width: 25%; height: 25%"></a>
+                <h2 style="font-size: x-large; text-align: left;">Learning About Windows Shortcuts</h2>
+                <p style="font-size: 20px; text-align: left;">
+                    I started off the day of picking it up from where I left off. I successfully converted all of my <i>Internship-Logs</i> content into React format.
+                    As well I spent some time trying to resolve issues relating to React Routers and Switches. Unfortunately, I had no success but I got a lead from my 
+                    mentor. Soon after, I had a meeting with my mentor to which he taught me windows shortcuts, which are essential to becoming a great software engineer.
+                    From this, I was able to navigate around my computer more effectively and efficiently without a mouse. Click image for 
+                    <a href="shortcuts.txt" target="_blank"><u style="color: blue;">Shortcuts Text File.</u></a>
+                    <br>
+                    <p style="font: size -5px; text-align: center;">(October 3, 2022)</p>
                 </p>
             </p>
             <br>
