--- a/Internship-Logs.html
+++ b/Internship-Logs.html
@@ -128,6 +128,22 @@
             <br>
             <br>
             <br>
+            <p>
+                <img src="Switch Error Solution.png" style="float:left; padding-right: 10px; padding-left: 10px; width: 25%; height: 25%"></a>
+                <h2 style="font-size: x-large; text-align: left;">Switches and Routes</h2>
+                <p style="font-size: 20px; text-align: left;">
+                    I found a solution to the Switch error I had mentioned previously. Through research, I learned that <b>Routes</b> served the same purpose as <b>Switch</b>. 
+                    After trial and error, I was successfully able to replace the use of Switches with Routes by importing <b>Routes</b> from <b>'react-router-dom'</b>. Additionally, I researched Route Paths to which 
+                    I learned the concept of capitalizing the first letter when assigning the JavaScript file to the element; capitalizing the first letter would render the 
+                    JavaScript file individually.
+                    <br>
+                    <br>
+                    <p style="font: size -5px; text-align: center;">(October 4, 2022)</p>
+                </p>
+            </p>
+            <br>
+            <br>
+            <br>
         </p>
         
     </body>
