--- a/Internship-Logs.html
+++ b/Internship-Logs.html
@@ -134,7 +134,7 @@
                 <p style="font-size: 20px; text-align: left;">
                     I found a solution to the Switch error I had mentioned previously. Through research, I learned that <b>Routes</b> served the same purpose as <b>Switch</b>. 
                     After trial and error, I was successfully able to replace the use of Switches with Routes by importing <b>Routes</b> from <b>'react-router-dom'</b>. Additionally, I researched Route Paths to which 
-                    I learned the concept of capitalizing the first letter when assigning the JavaScript file to the element; capitalizing the first letter would render the 
+                    I learned the concept of capitalizing the first letter when assigning the JavaScript file to an element; capitalizing the first letter would render the 
                     JavaScript file individually.
                     <br>
                     <br>
