--- a/Internship-Logs.html
+++ b/Internship-Logs.html
@@ -14,7 +14,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Working..</a></li>
                 <li><a href="#">Working...</a></li>
-                <li><a href="Internship-Logs.html">Internship Logs</a></li>
+                <li><a href="internship-logs.html">Internship Logs</a></li>
                 <li><a href="#">Contact Info</a></li>
             </ul>
         </nav>
