--- a/internship-logs.html
+++ b/internship-logs.html
@@ -144,6 +144,22 @@
             <br>
             <br>
             <br>
+            <p>
+                <img src="Using CSS ClassName.png" style="float:left; padding-right: 10px; padding-left: 10px; width: 25%; height: 25%"></a>
+                <h2 style="font-size: x-large; text-align: left;">Classes and Formatting</h2>
+                <p style="font-size: 20px; text-align: left;">
+                    My mentor advised me to take notice of processes I find myself constantly doing that take up time to-which I could have spent being more productive such as coding, 
+                    debugging, researching etc… To my surprise, I found myself constantly using the same inline styling for my internship logs. This essentially led me to
+                    create CSS classes which I could reuse for future logs. As well, I figured out a solution to my text alignment and font size errors which originated 
+                    from incorrect slash placements in tags when converting HTML to JSX.
+                    <br>
+                    <br>
+                    <p style="font: size -5px; text-align: center;">(October 6, 2022)</p>
+                </p>
+            </p>
+            <br>
+            <br>
+            <br>
         </p>
         
     </body>
