--- a/internship-logs.html
+++ b/internship-logs.html
@@ -160,6 +160,21 @@
             <br>
             <br>
             <br>
+            <p>
+                <img src="React Homepage.png" style="float:left; padding-right: 10px; padding-left: 10px; width: 25%; height: 25%"></a>
+                <h2 style="font-size: x-large; text-align: left;">Classes and Formatting</h2>
+                <p style="font-size: 20px; text-align: left;">
+                    The main focus of today was to fix up on my internship formatting as well as adding the rest of my internship logs onto my react website. After doing so, I noticed 
+                    that I have not touched my home page since I started my React journey. As such, I worked on my home page to hook the readers into the website. Additionally, I plan 
+                    to work on my home page and give a proper introduction to the readers. My primary focus at the moment is to deploy my React website onto Github as soon as possible.
+                    <br>
+                    <br>
+                    <p style="font: size -5px; text-align: center;">(October 11, 2022)</p>
+                </p>
+            </p>
+            <br>
+            <br>
+            <br>
         </p>
         
     </body>
